# Projeto_Agenda

./: .env.example  .gitignore  LICENSE  README.md  main.py  pyproject.toml  pytest.ini  render.yaml  requirements.txt  test_env.py
.github/: CODEOWNERS
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: ci.yml  lint.yml  release.yml  security.yml  tests.yml
alembic/: env.py
alembic/versions/: 3afa394c9de8_create_users_table.py  8f2c7a1b90d4_add_appointment_conflict_indexes.py
app/: main.py
app/models/: appointment.py  appointment_participant.py  base.py  company.py
app/repositories/: base.py
back/: requirements.txt
back/app/: main.py
backend/: main.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  (+2 more)
config/: .gitignore  alembic.ini  requirements.txt
configs/: .env.example  requirements.txt
decisions/: Projeto_Agenda.txt
docs/: README.md  estrutura-do-projeto.md  fase-1-frontend.md  fase-1.md  funcionalidades-atuais.md  funcionalidades-futuras.md  o-que-foi-feito-ate-agora.md  roadmap-melhorias-fase1.md
front/: index.html
frontend/: package-lock.json  package.json  vitest.config.js
scripts/: setup.sh
tests/: README.md  conftest.py  fixtures.py  test_appointment_cancel_service.py  test_appointment_model.py  test_appointment_time_conflict_service.py  test_base_repository.py  test_company_model.py  test_event_bus.py  test_idempotency_appointments.py  test_outbox_events.py  test_permissions.py  test_rate_limit.py  test_tenant_scope_enforcement.py  test_webhooks.py
(+562 files in other folders)
