[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aigenda"
version = "0.1.0"
description = "Appointment scheduling platform for teams and companies"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
  { name = "AIgenda Team" }
]
dependencies = [
  "alembic==1.18.4",
  "bcrypt==4.0.1",
  "cryptography==46.0.5",
  "email-validator==2.3.0",
  "fastapi==0.133.1",
  "passlib==1.7.4",
  "psycopg2-binary==2.9.11",
  "pydantic==2.12.5",
  "python-dotenv==1.2.1",
  "python-jose==3.5.0",
  "redis==6.4.0",
  "requests==2.32.5",
  "SQLAlchemy==2.0.47",
  "uuid6",
  "uvicorn==0.41.0"
]

[project.optional-dependencies]
dev = [
  "pytest==9.0.2"
]

[tool.setuptools]
package-dir = { "" = "backend" }

[tool.setuptools.packages.find]
where = ["backend"]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["backend"]
testpaths = ["tests"]
